# tinkoff-invest-cpp-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: GetInvestApiProtosList.cmake  GrpcProtobufGenerate.cmake  InvestApiProtosList.cmake  RestoreProtosPackagePublicKeyword.cmake
examples/: Examples.hpp  GetAccountsExample.cpp  GetUserTariffExample.cpp  MarketDataStreamExample.cpp
project/kreya/: tinkoff-invest-api.krproj
project/kreya/tinkoff/: directory.krpref
src/: Credentials.hpp  GprcUtil.hpp  MarketDataStream.hpp  Request.hpp  Service.hpp  StreamingService.hpp  main.cpp
